--- a/WEB_HTML/f5.html
+++ b/WEB_HTML/f5.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>Vedh</title>
+<title>Vedha</title>
 <link rel="stylesheet" href="design.css">
 </head>
 <body>
@@ -77,7 +77,7 @@ India.<br>
   <p><b>Help&Support</b></p>
   <font size="4">
    <a href="f5.html"><b>Privacy</b></a><br>
-  <a href="f6.html"><b>Terms&Conditions</b></a><br>
+  <a href="f6.html"><b>Terms & Conditions</b></a><br>
   <a href="f4.html"><b>Contact</b></a><br>
   </font>
  </nav>
